report: medthodology added

--- a/report/report.Rnw
+++ b/report/report.Rnw
@@ -10,7 +10,15 @@
 
 <<setup, include=FALSE, cache=FALSE, echo=FALSE>>=
 library(knitr)
-#load("../data/regression.RData")
+load("../data/subset-data.RData")
+load("../data/ridge-black-model.RData")
+ridge_black_model <- ridge_model
+ridge_black_mse <- ridge_mse
+cv_black_ridge <- cv_ridge
+ridge_black_lambda_min <- ridge_lambda_min
+load("../data/ridge-hisp-model.RData")
+load("../data/ols-black-model.RData")
+load("../data/ols-hisp-model.RData")
 opts_chunk$set(fig.align='left', fig.show='hold')
 options(formatR.arrow=TRUE,width=90)
 @
@@ -25,15 +33,22 @@ There can be no doubt that, in an increasingly divisive and frightening time for
 \section{Data}
 The data originally comes from the Research Triangle Insitute, part of the U.S. Department of Education.  This is the data that powers \texttt{http://collegescorecard.ed.gov}, a website to help college-bound students find the best schools for their interests and other preferences.  While this provides a great resource for students, it also has fostered the collection of an incredible amount of data on the over 7,700 places of higher learning in the country, which we can use to answer deeper questions.  Data points are included for types of school, graduation rates, admitance rates, student body demographics, and literally thousands more.  
 
-The original data file spans 20 years and is too large to be practical to include with this report, so we've extracted just the last three annual iterations of the <<<NO VAR>>> relevant variables we've used to develop the information contained in this report.  This resulted in the more manageably sized \texttt{insert filename here} data set, which we have included with this report. 
+The original data file spans 20 years and is too large to be practical to include with this report, so we've extracted just the last three annual iterations of the \Sexpr{length(new_dat[1,])} variables that had possible relevance to the production of the information contained in this report.  This resulted in the more manageably sized \texttt{data/subset-data.csv} data set, which we have included with this report. 
 
 \section{Methodology}
-To conduct the analysis, first the data was loaded from \texttt{Advertising.csv} and the variables of interest (``TV'' for TV ad budget and ``Sales'' for units sold) were summarized. Summaries can be found in 
-\texttt{data/eda-output.txt}, and histograms of both variables can be can be found in \texttt{images/}.  
+To conduct the analysis, first the data was loaded from the manageably sized \texttt{data/subset-data.csv} and some exploratory data anaylsis was performed (covered in the next section) on the variables contained. 
 
-To better understand how these two variables might relate to one another, I performed a simple linear regression analysis with the data.  The general idea is that we imagine changes one variable, in this case TV ad budgets, affects the beget changes in another variable, here sales figures. These are called the independent and dependent variables, respectively.  
+Our primary goal with our analysis of the data contained was to create a model that relates the data we have to the graduation rate for the minorities we are looking at: African-Americans and Hispanics. This will allow us to identify instituions that should be graduating minorities at a higher rate then they are— an institution whose students could clearly use more support.
 
-In a simple linear regression, we assume that this relationship can be described roughly by the equation $S = \beta_0+\beta_1(TV)$, where $\beta_0$ and $\beta_1$ are random variables determined from the data by a least-squares fit. The function \texttt{lm()} determines these variables from the data for us, and this information as well as a summary are located in \texttt{data/regression.Rdata}.  Scatterplots were constructed using \texttt{plot()} and \texttt{abline()}.
+To decide on the best model to use to predict the expected graduation rates of these minorities, we built both a normal least-squares model and a ridge regression model using a training set of the previous few years of data, before testing the performance of the models using a testing set comprised of the latest data in the table.  By comparing the Mean-Squared error of the predicited values compared to the test set, we determined which type of regression was better to use. Following is a brief discussion of the two techniques.
+
+In an ordinary linear squares regression (OLS), we assume that the relationship between the predictor variables and the minority graduation rates can be described roughly by the equation $GR = \beta_0+\beta_1(A)+\beta_2(B)+\beta_3(C) + ...$, where $\beta_p$ are random variables determined from the data by a least-squares fit called "coefficients" that scale the values of predictor variables $A, B, C ...$ so that the graduation rate $GR$ is optimally close to the true value. The function \texttt{lm()} determines these variables from the data for us, and this information as well as a summary are located in \texttt{data/ols-black-model.Rdata} and \texttt{data/ols-hisp-model.Rdata}.  
+
+A slight variation on regular least squares regression (which seeks to minimize the residual sum of squres, $RSS = \sum_{i=1}^n (y_i - \sum_{j=0}^p \beta_j(x_{ij}))^2$), ridge regression (RR) adds a term to the end of the expression called a shrinkage penalty: $\lambda \sum_{j=1}^p \beta_j^2$.  $\lambda$ in this case is called a "tuning parameter" and is ultimately chosen by the model-fitter, ideally as the value that minimizes the variance of the estimates as much as possible while maintaining a threshold of bias. In practice, computing power is used to calculate the estimates for many different values of $\lambda$ at once to allow for easy discovery of the 'ideal' value for each, and this is what we have done.
+
+This shrinkage penalty is a necessarily positive term that increases as $\lambda$ does.  The minimum value the above expression takes therefore must have smaller coefficients $\beta_j$ than simple linear regression, hence "shrinkage".
+
+\iffalse
 
 \section{Results}
 
@@ -86,5 +101,6 @@ and could be used if desired to asses goodness of fit using an F-test.
 
 Clearly, the linear regression model fits this data well, but certainly not perfectly. An $R^2$ value of $\Sexpr{round(reg_sum[[8]][1], 3)}$ means the line fits the data reasonably well as $\Sexpr{round(reg_sum[[8]][1], 3)} > 0.5$.  This means that for the majority of markets, increasing the TV ad budget for a product by \$1000 will result in an increase in sales of about $\Sexpr{round(reg_sum[[4]][2], 3)}$ units. 
 
+\fi
 
 \end{document}
